--- a/src/Sistrategia.SAT/Sistrategia.SAT.csproj
+++ b/src/Sistrategia.SAT/Sistrategia.SAT.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CFDI\Comprobante.cs" />
+    <Compile Include="CFDI\Emisor.cs" />
     <Compile Include="CFDI\IComprobante.cs" />
     <Compile Include="CFDI\IEmisor.cs" />
     <Compile Include="CFDI\IRegimenFiscal.cs" />
