--- a/src/Sistrategia.SAT/Sistrategia.SAT.csproj
+++ b/src/Sistrategia.SAT/Sistrategia.SAT.csproj
@@ -40,6 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CFDI\Comprobante.cs" />
+    <Compile Include="CFDI\ComprobanteComplemento.cs" />
+    <Compile Include="CFDI\ComprobanteTimbre.cs" />
     <Compile Include="CFDI\Emisor.cs" />
     <Compile Include="CFDI\RegimenFiscal.cs" />
     <Compile Include="CFDI\Ubicacion.cs" />
