--- a/src/Sistrategia.SAT/Sistrategia.SAT.csproj
+++ b/src/Sistrategia.SAT/Sistrategia.SAT.csproj
@@ -39,12 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CFDI\Complemento.cs" />
     <Compile Include="CFDI\Comprobante.cs" />
-    <Compile Include="CFDI\ComprobanteComplemento.cs" />
-    <Compile Include="CFDI\ComprobanteTimbre.cs" />
     <Compile Include="CFDI\Emisor.cs" />
     <Compile Include="CFDI\Receptor.cs" />
     <Compile Include="CFDI\RegimenFiscal.cs" />
+    <Compile Include="CFDI\Timbre.cs" />
     <Compile Include="CFDI\Ubicacion.cs" />
     <Compile Include="CFDI\UbicacionFiscal.cs" />
     <Compile Include="SATManager.cs" />
